# PAOO

Tema1/: CMakeLists.txt
Tema1/src/: CMakeLists.txt  DNA.cpp  DNA.hpp  Population.cpp  Population.hpp  main.cpp  output.txt  sequences.txt  target.txt
Tema2/: CMakeLists.txt
Tema2/src/: CMakeLists.txt  DNASequence.cpp  DNASequence.hpp  GeneticSequence.hpp  ProteinSequence.cpp  ProteinSequence.hpp  main.cpp
Tema3/: CMakeLists.txt
Tema3/src/: CMakeLists.txt  main.cpp
Tema3/src/Analyzer/: CMakeLists.txt  SequenceAnalyzer.hpp  SequenceAnalyzer.tpp
Tema3/src/Converter/: CMakeLists.txt  DNAConverter.cpp  DNAConverter.hpp
Tema3/src/Generator/: CMakeLists.txt  DNASequenceGenerator.cpp  DNASequenceGenerator.hpp
